--- a/src/style.css
+++ b/src/style.css
@@ -33,3 +33,36 @@ span{
     font-weight:700;
     display:block;
 }
+
+.modal{
+    padding:50px;
+    z-index:2;
+    border-radius:20px;
+    width:500px;
+    position:absolute;
+    top:10%;
+    left:10%;
+    background:lightblue;
+}
+
+.wrapper {
+    max-width: 450px;
+    margin: 20px auto;
+  }
+  .wrapper .search {
+    background: #fff;
+    width: 100%;
+    border-radius: 5px;
+    position: relative;
+    box-shadow: 0px 1px 5px 3px rgba(0, 0, 0, 0.12);
+  }
+  .search input {
+    height: 55px;
+    width: 100%;
+    outline: none;
+    border: none;
+    border-radius: 5px;
+    padding: 0 60px 0 20px;
+    font-size: 18px;
+    box-shadow: 0px 1px 5px rgba(0, 0, 0, 0.1);
+  }
