--- a/src/style.css
+++ b/src/style.css
@@ -1,72 +1,80 @@
-
-*{
-
+* {
 }
 
-.product-container{
-    width:25%;
-    max-width:25%;
-    display:inline-block;
+.product-container {
+  width: 25%;
+  max-width: 25%;
+  display: inline-block;
 }
 
-img{
-    max-width:200px;
+img {
+  max-width: 200px;
 }
 
-.Polaris-Tag{
-    margin-right:15px!important;
+.Polaris-Tag {
+  margin-right: 15px !important;
 }
 
-.tags{
-    margin-bottom:25px;
+.tags {
+  margin-bottom: 25px;
+  margin-top:25px;
 }
 
-.active-tags{
-    margin-bottom:25px;
+.active-tags {
+  margin-bottom: 25px;
 }
 
-span{
-    margin-right:5px;
+span {
+  margin-right: 5px;
 }
 
-.product-vendor{
-    font-weight:700;
-    display:block;
+.product-vendor {
+  font-weight: 700;
+  display: block;
 }
 
-.modal{
-    padding:50px;
-    z-index:2;
-    border-radius:20px;
-    width:500px;
-    position:absolute;
-    top:10%;
-    left:10%;
-    background:lightblue;
+.modal {
+  padding: 50px;
+  z-index: 2;
+  border-radius: 20px;
+  width: 500px;
+  position: absolute;
+  top: 10%;
+  left: 10%;
+  background: lightblue;
 }
 
 .wrapper {
-    max-width: 450px;
-    margin: 20px auto;
-  }
-  .wrapper .search {
-    background: #fff;
-    width: 100%;
-    border-radius: 5px;
-    position: relative;
-    box-shadow: 0px 1px 5px 3px rgba(0, 0, 0, 0.12);
-  }
-  .search input {
-    height: 55px;
-    width: 100%;
-    outline: none;
-    border: none;
-    border-radius: 5px;
-    padding: 0 60px 0 20px;
-    font-size: 18px;
-    box-shadow: 0px 1px 5px rgba(0, 0, 0, 0.1);
-  }
+  max-width: 450px;
+  margin: 20px auto;
+}
+.wrapper .search {
+  background: #fff;
+  width: 100%;
+  border-radius: 5px;
+  position: relative;
+  box-shadow: 0px 1px 5px 3px rgba(0, 0, 0, 0.12);
+}
+.search input {
+  height: 55px;
+  width: 100%;
+  outline: none;
+  border: none;
+  border-radius: 5px;
+  padding: 0 60px 0 20px;
+  font-size: 18px;
+  box-shadow: 0px 1px 5px rgba(0, 0, 0, 0.1);
+}
 
-  .welcome--title{
-    margin-bottom:25px;  
-  }
+.welcome--title {
+  margin-bottom: 25px;
+}
+
+.customer-welcome {
+  margin-bottom: 20px;
+}
+
+.btn-container {
+  display: block;
+  margin-bottom:25px;
+}
