--- a/src/style.css
+++ b/src/style.css
@@ -20,6 +20,7 @@ img {
   margin-top: 25px;
 }
 
+
 .active-tags {
   margin-bottom: 25px;
 }
@@ -33,16 +34,6 @@ span {
   display: block;
 }
 
-.modal {
-  padding: 50px;
-  z-index: 2;
-  border-radius: 20px;
-  width: 500px;
-  position: absolute;
-  top: 10%;
-  left: 10%;
-  background: lightblue;
-}
 
 .wrapper {
   max-width: 450px;
@@ -92,6 +83,11 @@ span {
   
 }
 
+.tags .Tags-button{
+  padding-top:6px;
+  padding-bottom:6px;
+}
+
 .svg--container {
   padding-left: 10px;
   vertical-align: middle;
@@ -99,4 +95,62 @@ span {
 
 .svg--container svg {
   width: 15px;
+}
+
+/* The Modal (background) */
+.modal {
+  display: block; /* Hidden by default */
+  position: fixed; /* Stay in place */
+  z-index: 1; /* Sit on top */
+  left: 0;
+  top: 0;
+  width: 100%; /* Full width */
+  height: 100%; /* Full height */
+  overflow: auto; /* Enable scroll if needed */
+  background-color: rgb(0,0,0); /* Fallback color */
+  background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
+}
+
+/* Modal Content/Box */
+.modal-content {
+  background-color: #fefefe;
+  margin: 15% auto; /* 15% from the top and centered */
+  padding: 20px;
+  border: 1px solid #888;
+  width: 80%; /* Could be more or less, depending on screen size */
+}
+
+/* The Close Button */
+.close {
+  color: #aaa;
+  float: right;
+  font-size: 28px;
+  font-weight: bold;
+}
+
+.close:hover,
+.close:focus {
+  color: black;
+  text-decoration: none;
+  cursor: pointer;
+}
+
+/* Modal Content */
+.modal-content {
+  position: relative;
+  background-color: #fefefe;
+  margin: auto;
+  padding: 30px;
+  border: 1px solid #888;
+  width: 80%;
+  box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2),0 6px 20px 0 rgba(0,0,0,0.19);
+  animation-name: animatetop;
+  animation-duration: 0.4s;
+  top:300px;
+}
+
+/* Add Animation */
+@keyframes animatetop {
+  from {top: -300px; opacity: 0}
+  to {top: 300px; opacity: 1}
 }
