--- a/theme-app-extension/blocks/test-block.liquid
+++ b/theme-app-extension/blocks/test-block.liquid
@@ -9,7 +9,7 @@
     
     <div style = "display:flex;flex-direction:column;" class = "grid-item-{{col}}"> 
      
-        <img src = "{{title[0]}}" width = "600" height = "400" style = "width:100%;height:200px;" />
+        <img src = "{{title[0]}}" width = "600" height = "400" style = "width:100%;" />
     
          <h3 style = "font-size:15px;margin-block-end:7px;margin-block-start:7px;">{{title[3]}}</h3>
          <h3 style = "margin-block-end:0px;margin-block-start:0px;font-weight:700;text-transform:uppercase;font-size:12px">{{title[2]}}</h3>
