--- a/theme-app-extension/blocks/test-block.liquid
+++ b/theme-app-extension/blocks/test-block.liquid
@@ -6,14 +6,17 @@
        
        {% assign title = field | last | split: "," %}
        {% assign col = title[4] %}
+       {% assign image_width = title[7] %}
+       
     
     <div style = "display:flex;flex-direction:column;" class = "grid-item-{{col}}"> 
      
-        <img src = "{{title[0]}}" width = "600" height = "400" style = "width:100%;" />
+        <img src = "{{title[0]}}" width = "{{image_width}}" height = "auto" style = "width:100%;object-fit:contain;margin-bottom:15px;" />
     
-         <h3 style = "font-size:15px;margin-block-end:7px;margin-block-start:7px;">{{title[3]}}</h3>
-         <h3 style = "margin-block-end:0px;margin-block-start:0px;font-weight:700;text-transform:uppercase;font-size:12px">{{title[2]}}</h3>
-         <h2 style = "margin-top:2px;"> £{{title[6]}}</h2>
+         <h3 style = "font-size:15px;margin-block-end:7px;margin-block-start:7px;text-align:center;">{{title[3]}}</h3>
+         <h3 style = "margin-block-end:0px;margin-block-start:5px;font-weight:700;text-transform:uppercase;font-size:12px;text-align:center;">{{title[2]}}</h3>
+         <span style = "margin-top:10px;font-size:20px;text-align:center;"> £{{title[6]}}</span>
+       
      </div>  
        {% comment %}  {% for t in title %}
         <h1>{{t}}</h1> <p>break<p>
