--- a/theme-app-extension/blocks/test-block.liquid
+++ b/theme-app-extension/blocks/test-block.liquid
@@ -1,4 +1,7 @@
 {{ 'style.css' | asset_url | stylesheet_tag }}
+<style>
+{% render 'custom-styles' %}
+</style>
 {% if shop.metafields.check.enabled == "true" %}
 <h3>Our Bestsellers</h3>
 <div style = "display:flex;justify-content:space-around;">
@@ -9,8 +12,8 @@
        {% assign col = title[4] %}
        {% assign image_width = title[7] %}
        
-    <h1>{{shop.metafields.check.enabled}}</h1>
-    <div style = "display:flex;flex-direction:column;" class = "grid-item-{{col}}"> 
+    
+    <div style = "display:flex;flex-direction:column;" class = "grid-item-{{col}} test"> 
      
         <img src = "{{title[0]}}" width = "{{image_width}}" height = "auto" style = "width:100%;object-fit:contain;margin-bottom:15px;" />
     
