--- a/src/style.css
+++ b/src/style.css
@@ -172,9 +172,10 @@ span {
 .Tags-row .svg--container svg{
   width:10px;
 }
+/*
 
-/* Add Animation */
 @keyframes animatetop {
   from {top: -300px; opacity: 0}
   to {top: 300px; opacity: 1}
 }
+/*
