--- a/theme-app-extension/blocks/test-block.liquid
+++ b/theme-app-extension/blocks/test-block.liquid
@@ -1,40 +1,24 @@
-{{ 'style.css' | asset_url | stylesheet_tag }}
-<style>
-{% render 'custom-styles' %}
-</style>
-{% if shop.metafields.check.enabled == "true" %}
-<h3>Our Bestsellers</h3>
-<div style = "display:flex;justify-content:space-around;">
-  
-  {% for field in shop.metafields.inventer %}
-       
-       {% assign title = field | last | split: "," %}
-       {% assign col = title[4] %}
-       {% assign image_width = title[7] %}
-       
-    
-    <div style = "display:flex;flex-direction:column;" class = "grid-item-{{col}} test"> 
-     
-        <img src = "{{title[0]}}" width = "{{image_width}}" height = "auto" style = "width:100%;object-fit:contain;margin-bottom:15px;" />
-    
-         <h3 style = "font-size:15px;margin-block-end:7px;margin-block-start:7px;text-align:center;">{{title[3]}}</h3>
-         <h3 style = "margin-block-end:0px;margin-block-start:5px;font-weight:700;text-transform:uppercase;font-size:12px;text-align:center;">{{title[2]}}</h3>
-         <span style = "margin-top:10px;font-size:20px;text-align:center;"> £{{title[6]}}</span>
-       
-     </div>  
-       {% comment %}  {% for t in title %}
-        <h1>{{t}}</h1> <p>break<p>
-         {% endfor %}
-        {% endcomment %}
-    
-       
-{% endfor %}
-  </div>
-{% endif %}
+<h1>Helo wold</h1>
+<button id = "btn">Button</button>
+{% assign reviews = block.settings.product.metafields.prapp-pub-reviews %}
+{% for key_value in reviews %}
+          {% assign review = key_value[1] %}
+          {{review}}
+          {% endfor %}
+
+<script>
+window.onload=function(){
+var content = {{ shop.metafields.inventer }};
+
+console.log("this is con" + JSON.stringify(content))
+}
+
+</script>
+
 {% schema %}
 {
   "name": "t:blocks.product-reviews.name",
-  "templates": ["index"],
+  "templates": ["product"],
   "target": "section",
   "settings": [
     {
